# git-stats

./: CLAUDE.md  Cargo.toml  README.md
docs/superpowers/plans/: 2026-06-22-git-stats.md  2026-06-22-word-cloud-redesign.md  2026-06-26-git-stats-more-stats.md
docs/superpowers/specs/: 2026-06-22-git-stats-design.md  2026-06-22-word-cloud-redesign-design.md  2026-06-26-git-stats-more-stats-design.md
src/: cli.rs  lib.rs  main.rs  model.rs  scoreboard.rs
src/git/: collect.rs
src/stats/: battlefield.rs  biggest.rs  busiest.rs  churn.rs  committers.rs  filters.rs  identity.rs  mod.rs  nightowl.rs  oops.rs  ownership.rs  streaks.rs  vitals.rs  words.rs
src/tui/: app.rs  loading.rs  mod.rs  panels.rs  theme.rs
tests/: collect.rs
