[package]
name = "git-stats"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
git2 = "0.21.0"
# unstable-rendered-line-info exposes Paragraph::line_count, used to clamp
# panel scrolling to the actual content height.
ratatui = { version = "0.30.2", features = ["unstable-rendered-line-info"] }
rayon = "1.12.0"

[dev-dependencies]
tempfile = "3.27.0"
